--- a/index.html
+++ b/index.html
@@ -18,54 +18,15 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
-  <div class="container mt-5" id="container">
-    <div class="form-container sign-up-container mt-2">
-      <form action="#">
-        <h1 class="font-weight-bold">Create Account</h1>
-        <div class="social-container">
-          <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <input type="text" placeholder="Name" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-        <button class="btn btn-info btn-rounded">Sign up</button>
-      </form>
-    </div>
-
-    <div class="form-container sign-in-container">
-      <form action="#">
-        <h1 class="font-weight-bold">Sign in</h1>
-        <div class="social-container">
-          <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <span>or use your account</span>
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-        <button class="btn btn-info btn-rounded ">Sign In</button>
-      </form>
-    </div>
-
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-left">
-          <h1 class="font-weight-bold">Good to see you!<h1>
-          <p>You already have an account? <br>Sign in!</p>
-          <button class="but" id="signIn">Sign In</button>
-        </div>
-        <div class="overlay-panel overlay-right">
-          <h1 class="font-weight-bold">Hello, Friend!</h1>
-          <p>You don't have account yet? Don't worry! You still can join us</p>
-          <button class="but" id="signUp">Sign Up</button>
-        </div>
+<body class="bg">
+  <div class="container h-100 mt-5">
+    <div class="row h-100">
+      <div class="col-md-12 bg">
+        <p>Text</p>
       </div>
     </div>
   </div>
+
 
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
