JS and CSS tweaks

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     <!-- Loading images, class for some extra controls -->
                     <img class="octopus-load" src="https://github.com/gvestmann/octopus/raw/main/img/loading-animation.gif">
                     <h2>I am the Octopus</h2>
-                    <p>I prety stupit qwiz made stardick HTML in the Java's crypt. 
-                    <p>I also have the Boot's Trap with som maternial dessign lookings. 
-                    <p>Or so my maker says.</p>
+                    <p>I prety stupit qwiz about us octopus. Pleas take if yo want!</p>
                     <!-- Start button - Uses Bootstrap MD classes - Calls function upon click - Icons from Font Awesome-->
                     <a href="#"><button id="start" onclick="stopLoading();" class="btn btn-purple start-btn">Start Quiz<i class="fas fa-play ml-3"></i></button></a>
                 </div>
